tests/functor-06/out.txt
error: undefined value: x
   ┌─ err.sml:11:11
   │
11 │ val _ = S.x
   │           ^

typechecking failed
